--- a/FrontEnd/to-do_list/src/components/home/Aside.css
+++ b/FrontEnd/to-do_list/src/components/home/Aside.css
@@ -2,3 +2,12 @@
   background-color: rgb(255, 255, 255);
   width: 20%;
 }
+
+@font-face {
+  font-family: 'BRUSHSCI';
+  src: url('../../fontes/BRUSHSCI.TTF');
+}
+
+.aside h3 {
+  font-family: 'BRUSHSCI';
+}
